deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-words
  labels:
    app: reverse-words
spec:
  template:
    spec:
      containers:
      - name: reverse-words
        image: quay.io/quaggy/tekton-reversewords:1e87e5380754c6beb769804f19b9ee996257b596
