service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reversewords
  name: reversewords
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: reversewords
  type: LoadBalancer
